2002-10-10  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/ks32c5000_eth.cdl
	* src/ks5000_ether.c (ks32c5000_eth_get_recv_buffer): Use the 
	cyg_crc32 function in the CRC package.

2002-07-10  Gary Thomas  <gary@chez-thomas.org>
2002-07-10  Simon Sudler <sudlersn@iis.fhg.de>

	* src/ks5000_ether.c: Fix problems with interrupt names (spelling).

2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/ks5000_ether.c: 
	Need to include <pkgconf/io_eth_drivers.h> for proper configuration
	of stand-alone (polled) vs. system (interrupt driven) mode.

2002-05-30  Jonathan Larmour  <jlarmour@redhat.com>

	* src/ks5000_ether.c (ks32c5000_eth_send): Conditionalize on
	CYGPKG_KERNEL for presence of thread delay function.
	(ks32c5000_eth_init): No need conditionalizing unmask on CYGPKG_NET.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it
// with other works to produce a work based on this file, this file does not